Fixed header alignment for aesthetics

--- a/css/style.css
+++ b/css/style.css
@@ -23,33 +23,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2rem;
-  line-height: 1;
+  font-size: 3rem;
+  line-height: 1.6;
 }
 
 h2 {
-  font-size: 2rem;
-  line-height: 1.2;
+  font-size: 2.5rem;
+  line-height: 1.4;
 }
 
 h3 {
-  font-size: 2rem;
-  line-height: 1;
+  font-size: 2.25rem;
+  line-height: 1.2;
 }
 
 h4 {
   font-size: 2rem;
-  line-height: 1.2;
+  line-height: 1.15;
 }
 
 h5 {
-  font-size: 2rem;
-  line-height: 1.2;
+  font-size: 1.75rem;
+  line-height: 1;
 }
 
 h6 {
-  font-size: 2rem;
-  line-height: 1.2;
+  font-size: 1.5rem;
+  line-height: 0.9;
 }
 
 p {
@@ -66,6 +66,7 @@ p {
 }
 
 .light {
+  margin-top: 2px;
   font-weight: lighter;
   color: black;
 }
@@ -84,20 +85,20 @@ header {
   margin: 0 auto;
   height: 64px;
   width: 100%;
+  z-index: 50;
   clear: both;
   display: flex;
-  z-index: 50;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: white;
 }
 
 .logo {
   height: 100%;
+  margin-left: 10px;
   float: left;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  margin: auto 0;
 }
 
 .logo img {
@@ -109,7 +110,7 @@ header {
 }
 
 .logo span {
-  display: inline-flex;
+  display: inline;
 }
 
 .menu {
@@ -124,6 +125,7 @@ header {
 
 .menu nav ul {
   display: inline-flex;
+  margin-right: 10px;
 }
 
 .menu nav ul li {
@@ -147,13 +149,23 @@ header {
   display: none;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
+  /*Change to 480px for mobile*/
+  header {
+    justify-content: center;
+  }
   .menu .desktop, .logo {
     display: none;
   }
   .menu .mobile {
     margin-top: 0.5rem;
     display: inline;
+  }
+  .menu .mobile ul li {
+    padding-right: 50px;
+  }
+  .menu .mobile ul li:last-child {
+    padding-right: 0;
   }
 }
 
@@ -195,6 +207,7 @@ header {
 
 .banner .button {
   height: 45px;
+  width: 50%;
   line-height: 40px;
   text-align: center;
   border-radius: 4px;
@@ -216,8 +229,15 @@ header {
 
 @media only screen and (max-width: 600px) {
   /*Change to 480px for mobile*/
+  .banner .container {
+    display: flex;
+    flex-flow: column wrap;
+  }
   .banner .hero {
-    flex: 0 0 90%;
+    flex: 2 100%;
+  }
+  .banner .learn h3 {
+    margin-top: -20px;
   }
 }
 
